changed styling and fixed gap animation

--- a/blog/style.css
+++ b/blog/style.css
@@ -1,7 +1,7 @@
 body {
   height:100vh;
   width:100vw;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.477),rgba(0, 0, 0, 0.45)) , url(../resources/bg.png);
+  background-color: rgba(30, 30, 30, 1.0);
   margin: 0rem;
   overflow: hidden;
 }
@@ -12,14 +12,14 @@ body {
   object-fit: cover;
   object-position: 100% center;
   user-select: none;
-  outline: .75vmin solid black;
-  filter: brightness(50%);
-  transition: outline 0.2s, filter 0.4s, transform 0.4s;
+  /* outline: .75vmin solid black; */
+  filter: brightness(50%) grayscale(.25) ;
+  transition: /* outline 0.2s, */ filter 0.4s, transform 0.4s;
 }
 
 #image-track > .image:hover {
-  outline: 1vmin solid black;
-  filter: brightness(100%);
+  /* outline: 1vmin solid black; */
+  filter: brightness(100%) grayscale(0);
   transform: scale(110%);
 }
 
